# dji3d

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
dji3d/: __main__.py
